Name title what the project is actually called

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Viborg Indefra Mit Vindue</title>
+    <title>Viborg Udenfor Mit Vindue</title>
   </head>
   <body>
     <div id="root" class=""></div>
